I am so fucking bad at this... I'm not very good at everything, but in this especially

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,41 @@
           <span class="nav-link-text">Cities</span>
         </a>
       </li>
+      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Countries">
+        <a class="nav-link" routerLink="countries">
+          <span class="nav-link-text">Countries</span>
+        </a>
+      </li>
+      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Migrations">
+        <a class="nav-link" routerLink="migrations">
+          <span class="nav-link-text">Migrations</span>
+        </a>
+      </li>
+      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Passengers">
+        <a class="nav-link" routerLink="passengers">
+          <span class="nav-link-text">Passengers</span>
+        </a>
+      </li>
+      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Persons">
+        <a class="nav-link" routerLink="persons">
+          <span class="nav-link-text">Persons</span>
+        </a>
+      </li>
+      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Planes">
+        <a class="nav-link" routerLink="planes">
+          <span class="nav-link-text">Planes</span>
+        </a>
+      </li>
+      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tickets">
+        <a class="nav-link" routerLink="tickets">
+          <span class="nav-link-text">Tickets</span>
+        </a>
+      </li>
+      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Users">
+        <a class="nav-link" routerLink="users">
+          <span class="nav-link-text">Users</span>
+        </a>
+      </li>
     </ul>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
