--- a/src/app/components/address/create-address/create-address.component.html
+++ b/src/app/components/address/create-address/create-address.component.html
@@ -27,5 +27,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Отмена</button>
-  <button mat-button [mat-dialog-close]="address" cdkFocusInitial>Обновить</button>
+  <button mat-button [mat-dialog-close]="address" cdkFocusInitial>Добавить</button>
 </div>
