--- a/src/app/components/address/update-address/update-address.component.html
+++ b/src/app/components/address/update-address/update-address.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Обновление даных о адресе</h1>
+<h1 mat-dialog-title>Обновление данных о адресе</h1>
 <div mat-dialog-content>
   <mat-form-field>
     <input matInput [(ngModel)]="data.address.country" placeholder="Страна">
