--- a/src/app/components/city/update-city/update-city.component.html
+++ b/src/app/components/city/update-city/update-city.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Обновление даных о городе</h1>
+<h1 mat-dialog-title>Обновление данных о городе</h1>
 <div mat-dialog-content>
   <mat-form-field>
     <input matInput [(ngModel)]="data.city.name" placeholder="Название города">
