--- a/src/app/components/employees/create-employee/create-employee.component.html
+++ b/src/app/components/employees/create-employee/create-employee.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Обновление даных о сотруднике</h1>
+<h1 mat-dialog-title>Добавление сотрудника</h1>
 <div mat-dialog-content>
   <mat-form-field>
     <input matInput [(ngModel)]="employee.position" placeholder="Должность">
@@ -18,5 +18,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Отмена</button>
-  <button mat-button [mat-dialog-close]="employee" cdkFocusInitial>Обновить</button>
+  <button mat-button [mat-dialog-close]="employee" cdkFocusInitial>Создать</button>
 </div>
