--- a/src/app/components/ticket/create-ticket/create-ticket.component.html
+++ b/src/app/components/ticket/create-ticket/create-ticket.component.html
@@ -2,6 +2,7 @@
 <div mat-dialog-content>
   <mat-form-field>
     <input matInput [(ngModel)]="ticket.cost" placeholder="Цена">
+    <span matSuffix>$</span>
   </mat-form-field>
   <mat-form-field>
     <input matInput [(ngModel)]="ticket.clazz" placeholder="Класс">
