--- a/src/app/components/employees/create-employee/create-employee.component.html
+++ b/src/app/components/employees/create-employee/create-employee.component.html
@@ -8,6 +8,7 @@
   </mat-form-field>
   <mat-form-field>
     <input matInput [(ngModel)]="employee.salary" placeholder="Заработная плата">
+    <span matSuffix>$</span>
   </mat-form-field>
   <mat-form-field>
     <input matInput [(ngModel)]="employee.workRecordBookNumber" placeholder="Номер трудовой книги">
