--- a/src/app/components/migration/create-migration/create-migration.component.html
+++ b/src/app/components/migration/create-migration/create-migration.component.html
@@ -4,13 +4,17 @@
     <input matInput [(ngModel)]="migration.departureId" placeholder="ID места отправки">
   </mat-form-field>
   <mat-form-field>
-    <input matInput [(ngModel)]="migration.departureDate" placeholder="Дата отправления">
+    <input matInput [matDatepicker]="picker1" [(ngModel)]="migration.departureDate" placeholder="Дата отправления">
+    <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+    <mat-datepicker #picker1></mat-datepicker>
   </mat-form-field>
   <mat-form-field>
     <input matInput [(ngModel)]="migration.arrivalId" placeholder="ID места прибытия">
   </mat-form-field>
   <mat-form-field>
-    <input matInput [(ngModel)]="migration.arrivalDate" placeholder="Дата прибытия">
+    <input matInput [matDatepicker]="picker2" [(ngModel)]="migration.arrivalDate" placeholder="Дата прибытия">
+    <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+    <mat-datepicker #picker2></mat-datepicker>
   </mat-form-field>
   <mat-form-field>
     <input matInput [(ngModel)]="migration.planeId" placeholder="ID самолета">
