--- a/src/app/components/person/update-person/update-person.component.html
+++ b/src/app/components/person/update-person/update-person.component.html
@@ -10,7 +10,9 @@
     <input matInput [(ngModel)]="data.person.sex" placeholder="Пол">
   </mat-form-field>
   <mat-form-field>
-    <input matInput [(ngModel)]="data.person.birthdate" placeholder="Дата рождения">
+    <input matInput [matDatepicker]="picker" [(ngModel)]="data.person.birthdate" placeholder="Дата рождения">
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
   <mat-form-field>
     <input matInput [(ngModel)]="data.person.passport" placeholder="Паспорт">
