--- a/src/app/components/employees/update-employee/update-employee.component.html
+++ b/src/app/components/employees/update-employee/update-employee.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Обновление даных о сотруднике</h1>
+<h1 mat-dialog-title>Обновление данных о сотруднике</h1>
 <div mat-dialog-content>
   <mat-form-field>
     <input matInput [(ngModel)]="data.employee.position" placeholder="Должность">
